--- a/index.html
+++ b/index.html
@@ -1,34 +1,89 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+<head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    
-    </head>
-    <body>
-       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#"> <img src="https://cdn.shopify.com/s/files/1/0084/2412/products/Jordan_Taylor_-_Spellbook_1024x1024.jpg?v=1504202003"></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">What did you break? <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Pricing</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Bonus PEBKAC Stories</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+    <script src="form.js"></script>
+</head>
+
+<body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">
+
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#"> What did you break? <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Pricing</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link disabled" href="#">Bonus PEBKAC Stories</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+  
+    <div class="container text-center">
+          <img height="30%" src="https://i.imgur.com/kaVn3Pc.jpg">
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <h1 class="display-1">We control all your tech</h1>
+                <form novalidate class="needs-validation">
+                    <div class="form-group">
+                        <label for="firstname">First Name</label>
+                        <input type="text" class="form-control" id="firstname" placeholder="First name" required>
+                        <div class="invalid-feedback">Well no name huh?</div>
+                    </div>
+                    <div class="form-group">
+                        <label for="firstname">Last Name</label>
+                        <input type="text" class="form-control" id="lastname" placeholder="Last name" required>
+                        <div class="invalid-feedback">Really? Are you Madonna?</div>
+                    </div>
+                    <div class="form-group">
+                        <label for="username">Username</label>
+                        <input type="text" class="form-control" id="username" placeholder="username" required>
+                        <div class="invalid-feedback">Oh, you're so clever with no username</div>
+                    </div>
+                    <div class="form-group">
+                        <label for="bday">Age</label>
+                        <input type="date" class="form-control" id="bday" required>
+                        <div class="invalid-feedback">Unless your birth certificate is written in stone, I need your age.</div>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <input type="text" class="form-control" id="email" required>
+                        <div class="invalid-feedback">Fine, we will never contact you</div>
+                    </div>
+                    <div class="form-group">
+                        <label for="validationCustom04">Password</label>
+                        <input type="password" class="form-control" id="password" placeholder="Password" required>
+                        <div class="invalid-feedback">Can't pick one you'd remember...I understand.</div>
+                    </div>
+
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" id="check" required>
+                        <label class="form-check-label" for="invalidCheck">Can we pester you with not spam-y email</label>
+                        <div class="invalid-feedback">
+                            You must agree to emails before submitting.
+                        </div>
+                    </div>
+                    <button class="btn btn-primary" type="submit" onclick="myFunction()">Submit form</button>
+                </form>
+            </div>
+        </div>
+      </div>
     </body>
+
 </html>
